Changelog

leleDroid 1.5 - 21/1/2012
-------------------------
Add 3 types of background for widget
Add icons to buttons and options menu
Remove title on most activities
Remove buttons from details activity
Remove buttons from info activity
Add options menu on details activity
Add options menu on info activity
Add confirnation dialog on delete
Bug fix (floating chart)
Bug fix (landscape chart view)

leleDroid 1.4 - 18/3/2011
-------------------------
Add chart dialog at ContextMenu
Add configuration dialog for widget
Add widget on click actions
Add color picker for the text of widget
Add progress bar component for widget
Can select the components of the widget
Bug fix (FC) when adding the widget without the data file
Bug fix (chart disappear) when total service days are <2

leleDroid 1.3 - 12/3/2011
-------------------------
Add a simple home screen widget
Code clear

leleDroid 1.2 - 28/2/2011
-------------------------
Complete code rewrite - 400% reduced size of apk
Remove joda-time jar, use GregorianCalendar instead
All data store at sdcard
Creation of Str class
Better listview
Add ContextMenu
Add OptionsMenu
Removed landscape layouts
Add scrollview on portrait layouts

leleDroid 1.1 - 28/01/2011
--------------------------
Bug fixes
Different layouts on portrait/landscape
Add english translation

leleDroid 1.0 - 15/01/2011
--------------------------
Initial release