@@ -1,3 +1,3 @@
-leleDroid by George Vasilakos
+leleDroid by Giorgos Vasilakos
 
-http://linuxteam.cs.teilar.gr/~forfolias/leleDroid
+http://george.vasilakos.com/projects/leleDroid/
