@@ -62,5 +62,5 @@
 		android:normalScreens="true"
 		android:largeScreens="true"
 		android:anyDensity="true" />
-	<uses-sdk android:minSdkVersion="6" android:targetSdkVersion="8"/>
+	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
 </manifest> 
