@@ -12,6 +12,7 @@
 	<string name="delete">Delete</string>
 	<string name="deleteConfirmation">Delete confirmation</string>
 	<string name="vathmoiInfo">Grade ranges</string>
+	<string name="rate">Rate</string>
 	<string name="share">Share</string>
 	<string name="shareAppText">Check LeleDroid, an amazing application for Android!\n
 You will find it free at the Android Market and at </string>
